fix(FEV-1198): dynamic scrollbars (on hover) for question-container

--- a/src/components/quiz-question/quiz-question-wrapper.scss
+++ b/src/components/quiz-question/quiz-question-wrapper.scss
@@ -14,6 +14,10 @@
     justify-content: center;
     width: 100%;
     overflow: hidden;
+    @include ivq-scrollbar;
+    &:hover {
+      overflow: auto;
+    }
   }
 
   .ivqButtonsWrapper {
